HomeWork for Lesson17

--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 </project>
